...
}

#Preview {
    NavigationStack {
        RepositoryListView(items: [
            Repository(
                fullName: "apple/swift",
                description: "The Swift Programming Language",
                language: "C++",
                stargazersCount: 67000,
                watchersCount: 67000,
                forksCount: 0,
                openIssuesCount: 0,
                pushedAt: .now.addingTimeInterval(-3 * 24 * 60 * 60),
...
